[project]
name = "ml-experiment-tracker-mcp"
version = "0.1.0"
description = "MCP server for tracking ML experiments (metrics, hyperparameters, tags) with SQLite persistence."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Oscar Valles" }]
keywords = ["mcp", "machine-learning", "experiment-tracking", "model-context-protocol"]
dependencies = [
    "mcp>=1.6.0",
]

[project.scripts]
ml-experiment-tracker-mcp = "ml_experiment_tracker_mcp.server:main"

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
